(ocamllex
 (modules implexer))

(menhir
 (modules impparser)
 (flags --explain --dump)
 (infer true))

(executables
 (names impc impi)
 (promote (until-clean))
 (flags ()))

(env
 (dev
  (flags
   (:standard -w -50))))

; clear test file output

(rule
 (alias clean-test)
 (action
  (bash "rm -f ../../test/*.asm")))
